[gd_scene load_steps=12 format=2]

[ext_resource path="res://GameElmnts/GlobalScene.gd" type="Script" id=1]
[ext_resource path="res://Sounds/Finish.wav" type="AudioStream" id=2]
[ext_resource path="res://GameElmnts/Cotillons.tscn" type="PackedScene" id=3]
[ext_resource path="res://Sounds/Finish2.wav" type="AudioStream" id=4]
[ext_resource path="res://Musics/24 Sacred Ground - TallForest.mp3" type="AudioStream" id=5]
[ext_resource path="res://Musics/05 Canyon - band music.mp3" type="AudioStream" id=6]
[ext_resource path="res://Musics/11 Plot - UnderCaves.mp3" type="AudioStream" id=7]
[ext_resource path="res://Musics/13 Field 1 - GreenHill.mp3" type="AudioStream" id=8]
[ext_resource path="res://Musics/21 Grif's Theme - SunBeach.mp3" type="AudioStream" id=9]
[ext_resource path="res://Musics/03 Nostalgia - WhiteMount.mp3" type="AudioStream" id=10]
[ext_resource path="res://Musics/18 Hero in Ice - Opening.mp3" type="AudioStream" id=11]

[node name="GlobalScene" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 1 )

[node name="ColorRectTop" type="ColorRect" parent="."]
margin_right = 1280.0
margin_bottom = 152.0
color = Color( 0, 0, 0, 0.901961 )

[node name="ColorRectBottom" type="ColorRect" parent="."]
margin_top = 569.0
margin_right = 1280.0
margin_bottom = 721.0
color = Color( 0, 0, 0, 0.901961 )

[node name="Finish" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = 4.0

[node name="Finish2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = 4.0

[node name="Cotillons" parent="." instance=ExtResource( 3 )]

[node name="Musics" type="Node" parent="."]

[node name="WhiteMount" type="AudioStreamPlayer" parent="Musics"]
stream = ExtResource( 10 )
volume_db = -8.0

[node name="BandMusic" type="AudioStreamPlayer" parent="Musics"]
stream = ExtResource( 6 )
volume_db = -8.0

[node name="UnderCaves" type="AudioStreamPlayer" parent="Musics"]
stream = ExtResource( 7 )
volume_db = -8.0

[node name="GreenHill" type="AudioStreamPlayer" parent="Musics"]
stream = ExtResource( 8 )
volume_db = -8.0

[node name="Title" type="AudioStreamPlayer" parent="Musics"]
stream = ExtResource( 11 )
volume_db = -8.0

[node name="SunBeach" type="AudioStreamPlayer" parent="Musics"]
stream = ExtResource( 9 )
volume_db = -8.0

[node name="TallForest" type="AudioStreamPlayer" parent="Musics"]
stream = ExtResource( 5 )
volume_db = -8.0
